Atualização e otimização das rotas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node + Fastify + Prisma",
+  "display": "Node + Fastify + Prisma + Zod + Swagger",
   "compilerOptions": {
+    "target": "es2022",
+    "module": "node16",
+    "moduleResolution": "node16",
+    "lib": ["es2022", "dom"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@prisma/*": ["prisma/*"],
+      "@prisma/*": ["prisma/*"]
     },
-    "target": "es2020",
-    "module": "commonjs",
-    "lib": ["dom", "es2020"],
-    "moduleResolution": "node",
     "esModuleInterop": true,
+    "moduleDetection": "force",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
     "resolveJsonModule": true,
+    "outDir": "dist",
     "types": ["node"]
   },
   "include": ["src", "prisma", "types"],
