--- a/package.json
+++ b/package.json
@@ -35,34 +35,36 @@
   },
   "homepage": "https://github.com/zMarcoos/backend-laber#readme",
   "dependencies": {
-    "@fastify/cors": "^10.0.2",
+    "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
-    "@fastify/rate-limit": "^10.2.2",
-    "@fastify/swagger": "^9.4.2",
-    "@fastify/swagger-ui": "^5.2.1",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
+    "dotenv": "^16.6.0",
+    "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
+    "fastify-type-provider-zod": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "nodemailer-express-handlebars": "^7.0.0",
-    "zod": "^3.24.1"
+    "prisma-zod-generator": "^0.8.13",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^22.15.32",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.0.4",
     "@types/nodemailer": "^6.4.17",
     "@types/nodemailer-express-handlebars": "^4.0.5",
-    "prettier": "^3.6.0",
+    "pino-pretty": "^13.0.0",
+    "prettier": "^3.6.1",
     "prisma": "^6.10.1",
-    "tsup": "^8.0.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "zod-prisma-types": "^3.2.4"
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
