--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "@types/node": "^24.0.4",
     "@types/nodemailer": "^6.4.17",
     "@types/nodemailer-express-handlebars": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^9.29.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.6.1",
     "prisma": "^6.10.1",
