Atualizações no banco de dados

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "${LOCAL_NODE_PORT}:${DOCKER_NODE_PORT}"
     env_file: .env
     environment:
-      NODE_ENV: development
-      DATABASE_URL: "mysql://${DB_USERNAME}:${DB_PASSWORD}@db:${DOCKER_DB_PORT}/${DB_NAME}"
+      NODE_ENV: ${NODE_ENV}
+      DATABASE_URL: "postgresql://${DB_USERNAME}:${DB_PASSWORD}@db:${DOCKER_DB_PORT}/${DB_NAME}"
       JWT_SECRET: ${JWT_SECRET}
       CORS_ORIGIN: ${CORS_ORIGIN}
     restart: always
@@ -21,18 +21,17 @@ services:
       - docker-network
 
   db:
-    image: mariadb:10.4.14
-    container_name: mariadb
+    image: postgres:15
+    container_name: postgres
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "${LOCAL_DB_PORT}:${DOCKER_DB_PORT}"
     volumes:
-      - mariadb-data:/var/lib/mysql
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - docker-network
 
@@ -41,4 +40,4 @@ networks:
     driver: bridge
 
 volumes:
-  mariadb-data:
+  postgres-data:
