--- a/.env
+++ b/.env
@@ -1,22 +1,34 @@
-DATABASE_URL="mysql://mariadb:mariadb@localhost:3306/usarptool"
-JWT_EXPIRES_IN=86_400
+# Conexão com o banco
+#DATABASE_URL="postgresql://usarptool:usarptool@db:5432/usarptool"
+DATABASE_URL="postgresql://usarptool:usarptool@localhost:9000/usarptool"
+DIALECT='postgres'
+
+# Configuração do banco
+DB_HOST='db'
+DB_NAME='usarptool'
+DB_USERNAME='usarptool'
+DB_PASSWORD='usarptool'
+LOCAL_DB_PORT='9000'
+DOCKER_DB_PORT='5432'
+
+# JWT e Auth
+JWT_EXPIRES_IN=86400
 JWT_ALGORITHM="HS256"
-PORT=5000
 JWT_SECRET='secret-key'
 SALT_ROUNDS=10
-NODE_ENV='development'
 
+# Ambiente e servidor
+NODE_ENV='development'
+PORT=5000
 LOCAL_NODE_PORT='3333'
 DOCKER_NODE_PORT='3333'
 
-LOCAL_DB_PORT='3306'
-DOCKER_DB_PORT='3306'
-DB_HOST='db'
-DB_NAME='usarptool'
-DB_USERNAME='mariadb'
-DB_PASSWORD='mariadb'
-DIALECT='mariadb'
-
-#http://localhost:5000/docs
-#https://usarptool.vercel.app/
+# Segurança e CORS
 ALLOWED_ORIGINS='*'
+CORS_ORIGIN='*'
+
+PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK=true
+
+# Documentação e front-end
+# http://localhost:5000/docs
+# https://usarptool.vercel.app/
